--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.4.2</version>
+		<version>3.4.5</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
@@ -15,11 +15,6 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>life-centre-squash</name>
 	<description>Life center squash league</description>
-	<url/>
-
-	<licenses>
-		<license/>
-	</licenses>
 
 	<developers>
 		<developer>
@@ -41,6 +36,10 @@
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
