Refactor to hibernate: Model Annotations. API reworks for new Repositories. JDBC DAOs removed. Start of work on anonymisation of players and redflagging.

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,14 @@
 spring.application.name=life-centre-squash
 
+# Data
 spring.datasource.url=jdbc:h2:file:~/dbs/squash/test
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=true
+
+
+#Testing
+#spring.jpa.show-sql=true
