Initial implementation of PDF generation using pdfBox.
Generation is done via the generate pdf button in the table admin page. Formatting is not currently complete but there is placeholder formatting courtesy of copilot which prints the divisions.

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=life-centre-squash
 
+squash.league.pdf.path=/home/liam/DEV/pdf
+
 # Data
 spring.datasource.url=jdbc:h2:file:~/dbs/squash/test
 spring.datasource.driverClassName=org.h2.Driver
