--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=life-centre-squash
 
 squash.league.pdf.path=/home/liam/DEV/pdf
-squash.league.run.init=false
+squash.league.run.init=true
 
 # Data
 spring.datasource.url=jdbc:h2:file:~/dbs/squash/test
@@ -9,7 +9,7 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.open-in-view=true
 
 
